# hotel-orbita-backend

./: .gitignore  pyproject.toml
backend/: settings.py  urls.py
hotel/: admin.py  models.py  pagination.py  serializers.py  urls.py  validators.py  views.py
hotel/migrations/: 0001_initial.py  0002_hotel_address_hotel_check_in_hotel_check_out_and_more.py  0003_alter_hotel_address_alter_hotel_email_and_more.py  0004_rename_phone_numer_hotel_phone_number.py
hotel_auth/: apps.py  serializers.py  urls.py  views.py
hotel_clients/: admin.py  apps.py  models.py
hotel_clients/migrations/: 0001_initial.py  0002_delete_clientstatus_client_status_alter_client_email.py
hotel_finances/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hotel_finances/migrations/: 0001_initial.py  0002_alter_price_fixed_alter_price_relative.py  0003_seasonsale_date_from_seasonsale_date_to.py
hotel_infrastructure/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hotel_infrastructure/migrations/: 0001_initial.py  0002_room_is_booking_alter_room_area_and_more.py  0003_building_address_building_name_alter_room_number_and_more.py  0004_alter_floor_unique_together.py
hotel_reservations/: admin.py  apps.py  models.py  serializers.py  views.py
hotel_reservations/migrations/: 0001_initial.py  0002_alter_reservation_client_alter_reservation_hotel.py
hotel_security/: admin.py  apps.py  models.py
hotel_service/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
hotel_staff/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+12 files in other folders)
